--- a/jenkins-config/Jenkinsfile
+++ b/jenkins-config/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
-    agent { label 'docker' }
-    //agent any
+    //agent { label 'docker' }
+    agent any
 
     stages {
         stage('Hello') {
