--- a/yaml_with_python/example.yml
+++ b/yaml_with_python/example.yml
@@ -1,15 +1,16 @@
 # Employee records
--  martin:
-    name: Martin D'vloper
-    job: Developer
-    skills:
-      - python
-      - perl
-      - pascal
--  tabitha:
-    name: Tabitha Bitumen
-    job: Developer
-    skills:
-      - lisp
-      - fortran
-      - erlang
+martin:
+  name: Martin D'vloper
+  job: Developer
+  skills:
+    - python
+    - perl
+    - pascal
+
+tabitha:
+  name: Tabitha Bitumen
+  job: Developer
+  skills:
+    - lisp
+    - fortran
+    - erlang
